--- a/client/app/src/App.css
+++ b/client/app/src/App.css
@@ -1,46 +1,1 @@
-.section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    width: 50vw;
-    margin: auto;
-    margin-top: 10vh;
-    padding: 2rem;
-    border-radius: 4rem;
-
-    background-color: rgb(238, 238, 237);
-}
-.section-title{
-    font-size: 1.5rem;
-    font-family: 'Arial';
-    font-weight: bolder;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-
-    margin-top: 5vh;
-    height: 20vh;
-    gap: .5rem;
-}
-.input{
-    background-color: white;
-    border-radius: 1rem;
-    padding: 5px 2rem
-}
-.button{
-    cursor: pointer;
-    margin-top: auto;
-    background-color: rgb(35, 35, 36);
-    padding: 8px 2rem;
-    border-radius: 3rem;
-
-    font-weight: bold;
-    font-family: Arial;
-    color: white;
-    align-self: center;
-}
+@import 'tailwindcss';
